<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/text_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_weight">
    </TextView>

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_height"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_weight"
        >
    </EditText>

    <TextView
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/text_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_height">
    </TextView>

    <TextView
        android:id="@+id/text_imc"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/text_imc"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_height">
    </TextView>

    <TextView
        android:id="@+id/value_imc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/value_imc"
        android:textSize="70sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_imc">
    </TextView>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="30sp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_imc">

    </TextView>
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </Button>





</androidx.constraintlayout.widget.ConstraintLayout>